--- a/ape-user/pom.xml
+++ b/ape-user/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.example</groupId>
+    <groupId>com.example</groupId>
     <artifactId>ape-user</artifactId>
 
     <properties>
@@ -20,10 +20,18 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.qj</groupId>
+            <groupId>com.example</groupId>
             <artifactId>ape-common-web</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ape-common-mybatisPlus</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
+
     </dependencies>
 
 </project>
