增加sql优化器SqlBeautyInterceptor实现日志打印sql 增加删除拦截器实现逻辑删除

--- a/ape-user/src/main/resources/application.yml
+++ b/ape-user/src/main/resources/application.yml
@@ -25,3 +25,13 @@ spring:
           slow-sql-millis: 2000
         wall:
           enabled: true
+sql:
+  beauty:
+    show: false
+
+mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-field: delete_flag
+      logic-delete-value: 1
+      logic-not-delete-value: 0
