--- a/ape-common/ape-common-web/pom.xml
+++ b/ape-common/ape-common-web/pom.xml
@@ -45,5 +45,10 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.83</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
