--- a/ape-common/pom.xml
+++ b/ape-common/pom.xml
@@ -10,6 +10,8 @@
     <modules>
         <module>ape-common-mybatisPlus</module>
         <module>ape-common-web</module>
+        <module>ape-common-swagger</module>
+        <module>ape-common-redis</module>
     </modules>
     <parent>
         <groupId>com.example</groupId>
