--- a/ape-user/pom.xml
+++ b/ape-user/pom.xml
@@ -31,6 +31,16 @@
         </dependency>
 
         <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ape-common-swagger</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ape-common-redis</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>1.4.2.Final</version>
