--- a/ape-common/ape-common-redis/pom.xml
+++ b/ape-common/ape-common-redis/pom.xml
@@ -38,5 +38,10 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.11.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
