--- a/ape-common/ape-common-redis/pom.xml
+++ b/ape-common/ape-common-redis/pom.xml
@@ -43,5 +43,10 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 </project>
