--- a/ape-common/ape-common-log/pom.xml
+++ b/ape-common/ape-common-log/pom.xml
@@ -31,8 +31,19 @@
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <!-- gson相关依赖 -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
     </dependencies>
 
+    <!-- aop相关依赖 -->
 
 
 </project>
