--- a/ape-dependencies/pom.xml
+++ b/ape-dependencies/pom.xml
@@ -40,6 +40,8 @@
         <junit.jupiter.version>5.9.2</junit.jupiter.version>
         <spring.boot.test.version>2.5.3</spring.boot.test.version>
         <junit.version>4.13.1</junit.version>
+        <spring.aop.version>2.3.12.RELEASE</spring.aop.version>
+        <gson.version>2.8.7</gson.version>
     </properties>
 
     <dependencyManagement>
@@ -182,6 +184,18 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <version>${spring.boot.test.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-aop</artifactId>
+                <version>${spring.aop.version}</version>
+            </dependency>
+            <!-- gson相关依赖 -->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
