--- a/ape-user/pom.xml
+++ b/ape-user/pom.xml
@@ -64,6 +64,14 @@
             <artifactId>spring-boot-test</artifactId>
             <scope>test</scope>
         </dependency>
+                <dependency>
+                    <groupId>org.mapstruct</groupId>
+                    <artifactId>mapstruct</artifactId>
+                </dependency>
+                <dependency>
+                    <groupId>org.mapstruct</groupId>
+                    <artifactId>mapstruct-processor</artifactId>
+                </dependency>
 
         <!--        <dependency>-->
 <!--            <groupId>com.example</groupId>-->
