工具类门模块增加

--- a/ape-common/pom.xml
+++ b/ape-common/pom.xml
@@ -14,7 +14,8 @@
         <module>ape-common-redis</module>
         <module>ape-common-log</module>
         <module>ape-common-starter</module>
-        <module>ape-test</module>
+        <module>ape-common-test</module>
+        <module>ape-common-tool</module>
     </modules>
     <parent>
         <artifactId>ape-dependencies</artifactId>
