--- a/ape-dependencies/pom.xml
+++ b/ape-dependencies/pom.xml
@@ -42,6 +42,14 @@
         <junit.version>4.13.1</junit.version>
         <spring.aop.version>2.3.12.RELEASE</spring.aop.version>
         <gson.version>2.8.7</gson.version>
+        <freemarker.version>2.3.30</freemarker.version>
+        <pinyin4j.version>2.5.0</pinyin4j.version>
+        <http.client.version>5.0.3</http.client.version>
+        <guava.version>19.0</guava.version>
+        <poi.version>3.17</poi.version>
+        <easyexcel.version>3.1.1</easyexcel.version>
+        <oss.version>3.12.0</oss.version>
+        <hiberante.validator.version>6.2.0.Final</hiberante.validator.version>
     </properties>
 
     <dependencyManagement>
@@ -197,6 +205,61 @@
                 <artifactId>gson</artifactId>
                 <version>${gson.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.freemarker</groupId>
+                <artifactId>freemarker</artifactId>
+                <version>${freemarker.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.belerweb</groupId>
+                <artifactId>pinyin4j</artifactId>
+                <version>${pinyin4j.version}</version>
+            </dependency>
+
+            <!-- easyexcel -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>easyexcel</artifactId>
+                <version>${easyexcel.version}</version>
+            </dependency>
+            <!-- poi -->
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+
+            <!-- httpclient5 -->
+            <dependency>
+                <groupId>org.apache.httpcomponents.client5</groupId>
+                <artifactId>httpclient5</artifactId>
+                <version>${http.client.version}</version>
+            </dependency>
+
+            <!-- guava -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
+            <!--aliyunOSS-->
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>${oss.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.hibernate</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>${hiberante.validator.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -206,6 +269,8 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
         </dependency>
+
+
     </dependencies>
 
     <repositories>
